# streamlit-fullstack-demo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: python-app.yml
.github/workflows/: python-app.yml
app/src/backend/: dockerfile  main.py
app/tests/backend/unit_test/: test_backend.py
