[project]
name = "streamlit-tui-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "httpie>=3.2.4",
    "httpx>=0.28.1",
    "moto>=5.1.5",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]
